--- a/PayZone/templates/user_auth/login.html
+++ b/PayZone/templates/user_auth/login.html
@@ -26,6 +26,15 @@
             margin: 0;
         }
 
+        .error-message {
+            color: red;
+            background: #ffebeb;
+            padding: 5px;
+            border: 1px solid #ff8080;
+            border-radius: 4px;
+            display: none;
+        }
+
         .login-box {
             background-color: #ffffff;
             border-radius: 8px;
@@ -74,6 +83,17 @@
     <div class="login-box">
         <div class="login-form">
             <h2 class="login-title text-center">Login to PayZone</h2>
+            <div class="error-message">
+                {% if show_error_message %}
+                    {% if messages %}
+                        <ul class="messages">
+                            {% for message in messages %}
+                                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                {% endif %}
+            </div>
             <form method="post">
                 {% csrf_token %}
                 <div class="mb-3">
@@ -97,6 +117,16 @@
         </div>
         <div class="login-image"></div>
     </div>
+
+    <!-- Javascript that shows the error message only when wrong credentials are inputted -->
+    <script>
+    //Why add this? Because when adding .css colors into it, it will show a red box for
+    //no reason at all. This script prevents showing the red box but instead hides it
+    //and will only show it when there really something wrong inputted.
+        {% if show_error_message and messages %}
+            document.querySelector(".error-message").style.display = "block";
+        {% endif %}
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
